Sholl: Implement polar analysis & length profiles (WIP)
- Allow Polar analysis (directional patterns) 
- Allow length profiles
- Implement "Angular Distribution Coherence" and related metrics
- Sholl points are now emitted at the center of components (as opposed to first-seen pixel)

While at it:
- Speedup parsing of 3D images. Replace old culling unique of 3D groups O(N²)  with a more efficient O(N) approach. Replaced the Chebyshev distance comparisons with a hash‑set with at most 26 neighbor checks per voxel
- Path: allow extension angles for 2-node paths
- Allow Polar plots to be exported as CSV
- misc